--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Breathe</title>
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="./js/lottie.js" type="text/javascript"></script>
 </head>
 <body>
-    
+
 
     <div class="container">
         <p class="breathing-text">Breathe In</p>
@@ -16,8 +17,11 @@
             <img id="mute-btn" src="./img/icons/volume-off.svg" alt="Mute/Unmute">
         </div>
         <div class="circle"></div>
+        <p id="phrase">A thoughtful message exscapes me...</p>
+
     </div>
     <audio id="background-music" src="./aud/meditation.wav" loop></audio>
     <script src="./js/app.js"></script>
+
 </body>
 </html>
