--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
     <script src="./js/lottie.js" type="text/javascript"></script>
 </head>
 <body>
-
-
-    <div class="container">
+ <div class="container">
         <p class="breathing-text">Breathe In</p>
         <div class="buttons">
-            <img id="mute-btn" src="./img/icons/volume-off.svg" alt="Mute/Unmute">
+            <img id="mute-btn" src="./img/volume-off.svg" alt="Mute/Unmute">
         </div>
         <div class="circle"></div>
-        <p id="phrase">A thoughtful message exscapes me...</p>
+        <p id="phrase">testing....</p>
 
     </div>
     <audio id="background-music" src="./aud/meditation.wav" loop></audio>
