--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="circle">
             <lottie-player src="https://breathe.candr.space/json/breathe.json"  background="transparent"  speed=".5"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
         </div>
-        
-        <p id="phrase">testing....</p>
+
+        <p id="phrase"></p>
 
     </div>
     <audio id="background-music" src="./aud/meditation.wav" loop></audio>
